<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/random_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/random" />

    <Button
        android:id="@+id/list_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list" />    
    
    <Button
        android:id="@+id/monday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday" />

    <Button
        android:id="@+id/tuesday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday" />

    <Button
        android:id="@+id/wednesday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday" />

    <Button
        android:id="@+id/thursday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday" />

    <Button
        android:id="@+id/friday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday" />

    <Button
        android:id="@+id/saturday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday" />

    <Button
        android:id="@+id/sunday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />

</LinearLayout>