<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/apps_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_apps" />

    <Button
        android:id="@+id/wallpapers_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_wallpapers" /> 
        
    <Button
        android:id="@+id/dreams_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_dreams" />    

</LinearLayout>